[REFACTOR] add function select and refactor method